src/css/site.css
/**
 * Site.css
 * ========================================================================= */

/**
 * Default < 724px
 * ------------------------------------------------------------------------- */

/**
 * Structure
 * ------------------------------------------- */

html,
body {
  margin: 0;
  padding: 0;

  font-family: 'Open Sans', 'sans-serif';
  font-size: 62.5%;
  color: #fff;

  background-color: #000;
}

a {
  color: #fff;
  text-decoration: none;
  
  transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86) 0ms;
}

a:hover {
  color: #d9d9d9;
}

h1,
h2 {
  margin-top: 0;
  margin-bottom: 2rem;

  font-family: 'Vollkorn', 'serif';
  font-weight: 400;

  text-align: center;
}

h2 {
  font-size: 4.2rem;
}

h2 small {
  font-size: 2.6rem;
}

p {
  margin-top: 0;
  margin-bottom: 2.4rem;
  line-height: 2.4rem;
}

p.featured {
  font-weight: 600;
}

small {
  display: block;
}

ul {
  font-size: 1.6rem;
}

.tfs-logo {
  width: 100%;

  background: url(../images/tfs_logo.png) 50% 0 no-repeat;
  background-size: auto 100%;
  text-indent: -9999px;
}

/**
 * Header
 * ------------------------------------------- */

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  height: 98vh;

  background-color: #e1903e;
}

.header .content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  
  width: 100%;
}

.header h1 {
  height: 8rem;
}

.header .social {
  margin: 0;
  padding: 0;

  list-style: none;
}

/**
 * Nav
 * ------------------------------------------- */

.nav {
  display: none;
}


/**
 * Sections
 * ------------------------------------------- */

section,
footer {
  padding: 2.4rem;

  font-size: 1.4rem;
}

section .img--round {
  display: block;
  width: 20rem;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2.4rem;

  border-radius: 50%;
}


/**
 * About
 * ------------------------------------------- */

.about {
  background-color: #5e97a0;
}


/**
 * Services
 * ------------------------------------------- */

.services {
  background-color: #e1903e;
}


/**
 * Portfolio
 * ------------------------------------------- */

.portfolio {
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.portfolio .flexslider {
  position: relative;
  margin-bottom: 0;

  background-color: transparent;
  border: 0 none;

  text-shadow: none;
}

.portfolio .flex-control-nav {
  position: absolute;
  bottom: 2.4rem;
  z-index: 500;
}

.portfolio .flex-control-paging li a {
  width: 1.6rem;
  height: 1.6rem;

  background-color: rgba(255,255,255,.5);
}

.portfolio .flex-control-paging li a.flex-active {
  background-color: rgba(255,255,255,.9);
}

.portfolio .flex-item {
  width: 100%;
  height: 56.25vw;
}

/**
 * Footer
 * ------------------------------------------- */

.footer {
  text-align: center;
}

.footer h2 {
  height: 8rem;
  margin-top: 2.4rem;
}

.footer .map {
  height: 50vh;
  width: 100%;
}

.footer-links a {
  display: block;

  margin-bottom: 2.4rem;
}



/**
 * Medium > 724px < 968px
 * ------------------------------------------------------------------------- */

@media screen and (min-width: 724px) {

  /**
   * Structure
   * ----------------------------------------- */

  p.featured {
    font-family: 'Vollkorn', 'serif';
    font-size: 2.6rem;
    font-weight: 400;
    line-height: 3rem;
    text-align: center;
  }

  /**
   * Header
   * ----------------------------------------- */

  .header {
    background: no-repeat center url(../images/header.jpg);
    background-size: cover;

    height: calc(100vh - 5.5rem);
  }

  .header h1 {
    height: 17rem;
  }


  /**
   * Nav
   * ----------------------------------------- */

  .nav {
    display: flex;
    justify-content: center;

    background-color: #000;
  }

  .nav.stick {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 3000;
  }

  .nav a {
    display: block;
    padding: 2rem;

    color: #d9d9d9;
    font-size: 1.4rem;
    text-transform: uppercase;
  }

  .nav a.active {
    color: #cf2525;
  }

  .nav a:hover {
    color: #cf2525;
  }


  /**
   * Section
   * ----------------------------------------- */

  section {
    padding: 12rem 4rem;
  }


  /**
   * Services
   * ------------------------------------------- */

  .service-list {
    width: 60vw;
    max-width: 50rem;
    margin-left: auto;
    margin-right: auto;
  }


  /**
   * Footer
   * ------------------------------------------- */

  .footer .map {
    width: 60vw;
    max-height: 40rem;
  }
}


/**
 * Large < 968px
 * ------------------------------------------------------------------------- */

 @media screen and (min-width: 968px) {

  /**
   * Sections
   * ------------------------------------------- */

  section {
    padding-left: 26rem;
    padding-right: 26rem;

    text-shadow: .3rem .3rem .5rem rgba(0, 0, 0, 0.4);
  }

  /**
   * About
   * ------------------------------------------- */

  .about {
    background: no-repeat center url(../images/panel.jpg);
    background-size: cover;
    background-position: cover;
  }

  /**
   * Services
   * ------------------------------------------- */

  .services {
    background: no-repeat center url(../images/couch.jpg);
    background-size: cover;
  }


  /**
   * Footer
   * ------------------------------------------- */

  .footer-links a {
    display: inline-block;
    margin-bottom: 0;
    margin-left: 2rem;
    margin-right: 2rem;
  }

  .footer-links a + a::before {
    position: relative;
    left: -2rem;

    content: "•"
  }
 }

